--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -12,7 +12,7 @@ section {
 }
 .portfolio__container > article {
     min-height: 10vh;
-    max-height: 50vh;
+    max-height: 80vh;
     overflow: hidden;
   }
 
@@ -46,6 +46,9 @@ section {
 
 
 @media screen and (max-width: 1800px) {
+    .portfolio__container > article {
+        max-height: 50vh;
+    }
     .portfolio__container {
         grid-template-columns: repeat(2, 1fr);
     }
