--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -1,121 +1,126 @@
+#contact {
+  margin-top: 30rem;
+  padding-top: 2rem;
+}
 .container.contact__container {
-    width: 58%;
-    display: grid;
-    grid-template-columns: 30% 58%;
-    gap: 12%;
+  width: 58%;
+  display: grid;
+  grid-template-columns: 30% 58%;
+  gap: 12%;
 }
 
 .contact__options {
-    display: flex;
-    flex-direction: column;
-    gap: 1.2rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1.2rem;
 }
 
 .contact__option {
-    padding: 1.2rem;
-    text-align: center;
-    border: 1px solid transparent;
-    transition: var(--transition);
-    border-radius: 1.2rem;
-    border: 1px solid var(--color-secondary);
-    transition: var(--transition);
-    box-shadow: 2px 2px 4px var(--color-secondary);
-    min-width: 100;
+  padding: 1.2rem;
+  text-align: center;
+  border: 1px solid transparent;
+  transition: var(--transition);
+  border-radius: 1.2rem;
+  border: 1px solid var(--color-secondary);
+  transition: var(--transition);
+  box-shadow: 2px 2px 4px var(--color-secondary);
+  min-width: 100;
 }
 
 .contact__option:hover {
-    background: white;
-    box-shadow: 2px 2px 8px var(--color-secondary);
+  background: white;
+  box-shadow: 2px 2px 8px var(--color-secondary);
 }
 
 .contact__option-icon {
-    font-size: 1.5rem;
-    margin-bottom: 0.5rem;
+  font-size: 1.5rem;
+  margin-bottom: 0.5rem;
 }
 
 .contact__option a {
-    margin-top: 0.7rem;
-    display: inline-block;
-    font-size: 0.8rem;
+  margin-top: 0.7rem;
+  display: inline-block;
+  font-size: 0.8rem;
 }
 
 /* FORM */
 
 form {
-    display: flex;
-    flex-direction: column;
-    gap: 1.2rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1.2rem;
 }
 
-input, textarea {
-    width: 100%;
-    padding: 1.5rem;
-    border-radius: 0.5rem;
-    background: transparent;
-    border: 2px solid var(--color-primary);
-    resize: none;
-    color: var(--color-primary)
+input,
+textarea {
+  width: 100%;
+  padding: 1.5rem;
+  border-radius: 0.5rem;
+  background: transparent;
+  border: 2px solid var(--color-primary);
+  resize: none;
+  color: var(--color-primary);
 }
 
 .form__text:focus {
-    background: white;
+  background: white;
 }
 .submit {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .submit__btn {
-    float: left;
+  float: left;
 }
 
-.submit__check{
-    margin-left: 1rem;
-    color: #00000020;
-    font-size: 2rem;
-    display: flex;
-    float: left;
+.submit__check {
+  margin-left: 1rem;
+  color: #00000020;
+  font-size: 2rem;
+  display: flex;
+  float: left;
 }
 
 .submit__check--true {
-    margin-left: 1rem;
-    color: var(--color-secondary) !important;
-    font-size: 2rem;
-    display: flex;
-    float: left;
+  margin-left: 1rem;
+  color: var(--color-secondary) !important;
+  font-size: 2rem;
+  display: flex;
+  float: left;
 }
 
 .submit__sent {
-    display: none;
+  display: none;
 }
 
 .submit__sent--true {
-    margin-left: 1rem;
-    display: flex;
-    float: left;
-    font-size: 0.8rem !important;
+  margin-left: 1rem;
+  display: flex;
+  float: left;
+  font-size: 0.8rem !important;
 }
 
 .submit__error {
-    display: none;
+  display: none;
 }
 
 .submit__error--true {
-    margin-left: 1rem;
-    display: flex;
-    float: left;
-    font-size: 0.8rem !important;
+  margin-left: 1rem;
+  display: flex;
+  float: left;
+  font-size: 0.8rem !important;
 }
 
 @media screen and (max-width: 1500px) {
-    .container.contact__container {
-        grid-template-columns: 1fr;
-        gap: 2rem;
-    }
+  .container.contact__container {
+    grid-template-columns: 1fr;
+    gap: 2rem;
+  }
 }
 
 @media screen and (max-width: 600px) {
-    .container.contact__container {
-        width: var(--container-width-sm)
-    }
+  .container.contact__container {
+    width: var(--container-width-sm);
+  }
 }
