--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,76 +1,75 @@
 header {
-    height: 100vh;
-    padding-top: 7rem;
-    overflow: hidden;
+  min-height: 100vh;
+  padding-top: 8vh;
+  overflow: hidden;
 }
 
 h1 {
-    font-family: 'Rubik Iso', cursive;
+  font-family: "Rubik Iso", cursive;
 }
 
 h2 {
-    font-size: 2vw;
+  font-size: 2vw;
+  padding: 0 !important;
 }
 
 .header__container {
-    text-align: center;
-    height: 100%;
-    position: relative;
+  text-align: center;
+  height: 100%;
+  position: relative;
 }
-
 
 /* ============ CallToAction ============ */
 .calltoaction {
-    margin-top: 2.5rem;
-    display: flex;
-    gap: 1.2rem;
-    justify-content: center;
+  margin-top: 2.5rem;
+  display: flex;
+  gap: 1.2rem;
+  justify-content: center;
 }
 
 /* ============ HeaderSocials ============ */
 .header__socials {
-    font-size: 4rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 0.8rem;
-    position: absolute;
-    left: 0;
-    bottom: 3rem;
+  font-size: 4rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.8rem;
+  position: absolute;
+  left: 0;
+  bottom: 3rem;
 }
 
 /* thin line under socials */
 .header__socials::after {
-    content: "";
-    width: 3px;
-    height: 8rem;
-    background: var(--color-secondary);
+  content: "";
+  width: 3px;
+  height: 8rem;
+  background: var(--color-secondary);
 }
 
 /* ============ Scroll down ============ */
 .scroll__down {
-    position: absolute;
-    right: -2.3rem;
-    bottom: 7rem;
-    transform: rotate(90deg);
-    font-weight: 500;
+  position: absolute;
+  right: -2.3rem;
+  bottom: 7rem;
+  transform: rotate(90deg);
+  font-weight: 500;
 }
-
-
 
 /* ========== MEDIA QUERIES (SMALL DEVICES) ============= */
 
 @media screen and (max-width: 700px) {
-    .header__socials, .scroll__down {
-        display: none;
-    }
-    header {
-        padding-top: 2rem;
-    }
+  .header__socials,
+  .scroll__down {
+    display: none;
+  }
+  header {
+    padding-top: 2rem;
+  }
 }
 
 @media screen and (max-width: 550px) {
-    h1 {
-        font-size: 3rem !important;
-    }
+  h1 {
+    font-size: 3rem !important;
+  }
 }
