--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -1,70 +1,78 @@
-section {
-    padding-bottom: 10rem;
+#portfolio {
+  padding-bottom: 10rem;
 }
+
+#portfolio > h2 {
+  font-size: calc(2vw + 1rem);
+}
+
 .btn {
-    font-size: 1.5rem !important;
+  font-size: 1.5rem !important;
 }
 
 .portfolio__container {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 2.5rem;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 2.5rem;
 }
 .portfolio__container > article {
-    min-height: 10vh;
-    max-height: 80vh;
-    overflow: hidden;
-  }
+  min-height: 22rem;
+  max-height: 80vh;
+  overflow: hidden;
+}
 
 .portfolio__item {
-    text-align: center;
-    
-    padding: 1.3rem;
-    border-radius: 2rem;
-    border: 1px solid var(--color-secondary);
-    transition: var(--transition);
-    box-shadow: 2px 2px 2px var(--color-secondary);
+  text-align: center;
+
+  padding: 1.3rem;
+  border-radius: 2rem;
+  border: 1px solid var(--color-secondary);
+  transition: var(--transition);
+  box-shadow: 2px 2px 2px var(--color-secondary);
 }
 
 .portfolio__item:hover {
-    background: var(--color-bg);
-    box-shadow: 2px 2px 7px var(--color-secondary);
+  background: var(--color-bg);
+  box-shadow: 2px 2px 7px var(--color-secondary);
 }
 
 .portfolio__item-image {
-    max-height: 20vh;
-    border-radius: 1.5rem;
-    overflow: hidden;
+  max-height: 20vh;
+  border-radius: 1.5rem;
+  overflow: hidden;
+  border: 1px solid var(--color-secondary);
+  box-shadow: 2px 2px 2px var(--color-primary);
 }
 
 .portfolio__item h3 {
-    margin: 1.2rem 0 2rem;
+  margin: 1.2rem 0 2rem;
 }
 
 /* ========== MEDIA QUERIES ============= */
 
-
-
 @media screen and (max-width: 1800px) {
-    .portfolio__container > article {
-        max-height: 50vh;
-    }
-    .portfolio__container {
-        grid-template-columns: repeat(2, 1fr);
-    }
+  .portfolio__container > article {
+    max-height: 50vh;
+  }
+  .portfolio__container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  section {
+    padding-bottom: 15rem !important;
+  }
 }
 
 @media screen and (max-width: 730px) {
-    .btn {
-        font-size: 1rem !important;
-    }
+  .btn {
+    font-size: 1rem !important;
+  }
 }
 
 @media screen and (max-width: 550px) {
-    .btn {
-        font-size: 0.7rem !important;
-    }
-    h3 {
-        font-size: 0.7rem !important;
-    }
+  .btn {
+    font-size: 0.7rem !important;
+  }
+  h3 {
+    font-size: 0.7rem !important;
+  }
 }
